--- a/spring-boot-interview/src/main/resources/application.properties
+++ b/spring-boot-interview/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/teste-compasso?useSSl=false&useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
